--- a/styles/style.css
+++ b/styles/style.css
@@ -89,9 +89,9 @@ body {
 }
 
 .header img {
-    width: 50%;
+    width: 60%;
     height: auto;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .about {
@@ -155,6 +155,10 @@ body {
     cursor: pointer;
 }
 
+.authors_container .author button img:hover {
+    transform: scale(1.1);
+}
+
 .authors_container .author .modal_container {
     background-color: rgba(0,0,0,0.3);
     display: flex;
@@ -197,8 +201,4 @@ body {
     font-weight: 200;
     color: black;
     padding-top: 20px;
-}
-
-.authors_container .author .modal button {
-    color: #9a292b;
 }
