--- a/styles/style.css
+++ b/styles/style.css
@@ -83,9 +83,10 @@ body {
     font-weight: 700;
 }
 
-.header h2 {
+.header h3 {
     color: #9a292b;
     font-style: italic;
+    font-weight: 300;
 }
 
 .header img {
