fix tooltip transition

--- a/styles/style.css
+++ b/styles/style.css
@@ -131,7 +131,7 @@ body {
     top: 125%;
     left: -50%;
     opacity: 0;
-    transition: opacity 0.3s;
+    transition: 0.3s ease-in-out;
 }
 
 .about .tooltip:hover .tooltip-text {
